package A21_SchiffeVersenken.model;

public enum Direction {
    HORIZONTAL,
    VERTICAL
}

